--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
     <input type="number" id="num1" placeholder="Número 1">
     <input type="number" id="num2" placeholder="Número 2">
-    <button onclick="calculate()">Calcular Soma</button>
-    <div id="resultado"></div>
-    <script src="calculator.js"></script>
+
+   <!-- Botões para fazer as operações -->
+   
+   <button onclick="calculate('add')">Somar</button>
+   <button onclick="calculate('subtract')">Subtrair</button>
+   <button onclick="calculate('multiply')">Multiplicar</button>
+   
+   <div id="resultado"></div>
+   <script src="calculator.js"></script>
 </body>
 </html>
