Adicionada funcionalidade de multiplicação

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
    
    <button onclick="calculate('add')">Somar</button>
    <button onclick="calculate('subtract')">Subtrair</button>
+   <button onclick="calculate('multiply')">Multiplicar</button>
+
+
    <div id="resultado"></div>
    <script src="calculator.js"></script>
 </body>
