Adicionada funcionalidade de divisão

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <button onclick="calculate('add')">Somar</button>
    <button onclick="calculate('subtract')">Subtrair</button>
    <button onclick="calculate('multiply')">Multiplicar</button>
+   <button onclick="calculate('divide')">Dividir</button>
 
 
    <div id="resultado"></div>
